@@ -3,8 +3,9 @@ NEWS file for Transmission <http://www.transmissionbt.com/>
 1.40 (2008/mm/dd)
 http://trac.transmissionbt.com/query?group=component&milestone=1.40
 - All Platforms
-   + Lazy bitfields
    + Rewritten bandwidth management code
+   + Lazy bitfields
+   + Support compression when serving Web Interface content and RPC responses
 - Mac
    + Option to automatically update the blocklist weekly
    + Sparkle updated to 1.5
